--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,6 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -17,11 +15,13 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  background-color: #282c34;
+  color: white;
+  padding: 7px 10px;
+  width: max-content;
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
