--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,17 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  color: white;
+}
+
+* {
+  background-color: #282c34;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -24,4 +27,21 @@ button {
   margin: 0 auto;
   flex-direction: column;
   margin-bottom: 20px;
+}
+
+.chance-table {
+  width: 100%;
+}
+
+.chance-row {
+  width: 100%;
+}
+
+input {
+  color: black;
+  background-color: white;
+}
+
+input:disabled {
+  background-color: lightgrey;
 }
